--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ ServerCLI/bin
 ServerCLI/obj
 ServerCLI.Tests/bin
 ServerCLI.Tests/obj
+
+# Exclude test results
 TestResults
 
 # User-specific files
